hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_getExtension_variation.php
<?php

	class myClass
	{	
		public $varX;
		public $varY;
	}
	$rc=new reflectionClass('myClass');
	var_dump( $rc->getExtension()) ;
?>
